@@ -143,7 +143,9 @@ name|java
 operator|.
 name|util
 operator|.
-name|List
+name|concurrent
+operator|.
+name|ConcurrentHashMap
 import|;
 end_import
 
@@ -391,13 +393,22 @@ init|=
 literal|null
 decl_stmt|;
 specifier|private
-name|HashMap
+name|Map
 argument_list|<
 name|String
 argument_list|,
 name|ContentSummary
 argument_list|>
 name|pathToCS
+init|=
+operator|new
+name|ConcurrentHashMap
+argument_list|<
+name|String
+argument_list|,
+name|ContentSummary
+argument_list|>
+argument_list|()
 decl_stmt|;
 comment|// scratch path to use for all non-local (ie. hdfs) file system tmp folders
 specifier|private
@@ -2009,23 +2020,6 @@ name|ContentSummary
 name|cs
 parameter_list|)
 block|{
-if|if
-condition|(
-name|pathToCS
-operator|==
-literal|null
-condition|)
-name|pathToCS
-operator|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|ContentSummary
-argument_list|>
-argument_list|()
-expr_stmt|;
 name|pathToCS
 operator|.
 name|put
@@ -2044,23 +2038,6 @@ name|String
 name|path
 parameter_list|)
 block|{
-if|if
-condition|(
-name|pathToCS
-operator|==
-literal|null
-condition|)
-name|pathToCS
-operator|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|ContentSummary
-argument_list|>
-argument_list|()
-expr_stmt|;
 return|return
 name|pathToCS
 operator|.
